# economy-sim-rust

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  README.md  TEST_AUDIT.md  TEST_IMPROVEMENTS.md  analyze_trades.py  spec.md  test_improvements.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
experiments/: strategy_comparison.yaml
hooks/: pre-commit
results/: comparison.csv  quiet_test.json
scenarios/: README.md  abundance.json  balanced_start.json  competitive_market.json  resource_scarcity.json  trading_specialization.json
src/: analysis.rs  auction.rs  auction_builder.rs  batch_analysis.rs  cli.rs  core.rs  events.rs  events_test.rs  experiment.rs  fp.rs  lib.rs  main.rs  main_old.rs  metrics.rs  metrics_test.rs  query.rs  scenario.rs  scenario_test.rs  strategies.rs  types.rs  ui.rs  visualization.rs
strategy_evaluation/: ANALYSIS_REPORT.md  BUG_REPORT.md  EVALUATION_REPORT.md  balanced_strategy.json  balanced_strategy.txt  balanced_vs_balanced.json  balanced_vs_balanced.txt  comparison.txt  greedy_vs_greedy.json  greedy_vs_greedy.txt  growth_strategy.json  growth_strategy.txt  growth_vs_growth.json  growth_vs_growth.txt  quick_analysis.sh  survival_vs_growth.json  survival_vs_growth.txt  survival_vs_survival.json  survival_vs_survival.txt  trading_strategy.json  trading_strategy.txt  trading_vs_balanced.json  trading_vs_balanced.txt  trading_vs_trading.json  trading_vs_trading.txt
tests/: strategy_integration_tests.rs
