[package]
name = "village-model"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "village-model-sim"
path = "src/main.rs"

[dependencies]
rand = "0.9"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lexopt = "0.3"
ratatui = "0.29"
crossterm = "0.28"
log = "0.4"
env_logger = "0.11"
serde_yaml = "0.9.34"
